name:                blog
version:             0.1.0.0
synopsis:            My personal blog, generated using Hakyll 
homepage:            https://github.com/AustinRochford/blog
license:             MIT
license-file:        LICENSE
author:              Austin Rochford
maintainer:          austin.rochford@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      app
  main-is:             Site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       containers,
                       hakyll,
                       temporary,
                       pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AustinRochford/blog
